feat: 新增 Netty 交由 Spring 容器管理